# wordhunt

./: README.md  pyproject.toml  test.py
tests/: test_wordhunt.py
wordhunt/: cli.py  dictionarytrie.py  game.py
